--- a/data/io.github.fkinoshita.Vibrant.appdata.xml.in
+++ b/data/io.github.fkinoshita.Vibrant.appdata.xml.in
@@ -3,6 +3,7 @@
 	<id>io.github.fkinoshita.Vibrant.desktop</id>
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
+  <summary>Generate CSS gradients</summary>
 	<description>
 	  <p>No description</p>
 	</description>
