build: Add development profile
This also adds the "devel" css class to the top level window.

--- a/meson.build
+++ b/meson.build
@@ -7,7 +7,23 @@ project('vibrant', 'rust',
 i18n = import('i18n')
 gnome = import('gnome')
 
+project_id = 'io.github.fkinoshita.Vibrant'
 
+# Profiles
+application_id = project_id
+if get_option('profile') == 'development'
+    profile = 'Devel'
+    application_id = '@0@.Devel'.format(application_id)
+    message(application_id)
+
+    find_program('git')
+    rev_txt = run_command('git', 'rev-parse', '--short', 'HEAD').stdout().strip()
+    version = meson.project_version() + '-' + rev_txt
+else
+    message(application_id)
+    profile = ''
+    version = meson.project_version()
+endif
 
 subdir('data')
 subdir('src')
