--- a/src/config.rs.in
+++ b/src/config.rs.in
@@ -1,3 +1,4 @@
+pub static PROFILE: &str = @PROFILE@;
 pub static VERSION: &str = @VERSION@;
 pub static GETTEXT_PACKAGE: &str = @GETTEXT_PACKAGE@;
 pub static LOCALEDIR: &str = @LOCALEDIR@;
