--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 
 [dependencies]
 gettext-rs = { version = "0.7", features = ["gettext-system"] }
-gtk = { version = "0.6", package = "gtk4" }
+gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
 
 [dependencies.adw]
 package = "libadwaita"
-version = "0.4.3"
+version = "0.5"
 features = ["v1_4"]
