--- a/data/com.felipekinoshita.Vibrant.metainfo.xml.in
+++ b/data/com.felipekinoshita.Vibrant.metainfo.xml.in
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop">
-	<id>io.github.fkinoshita.Vibrant.desktop</id>
+	<id>com.felipekinoshita.Vibrant.desktop</id>
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
   <summary>Generate CSS gradients</summary>
